Added favicon icon, changed title name, bound the HTMl to CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="https://www.favicon.cc/logo3d/871268.png" type="website-favicon">
+  <title>Dennis Poliku Dalip</title>
 </head>
 <body>
+
   
 </body>
 </html>
