Added a front page logo and two header element

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <title>Dennis Poliku Dalip</title>
 </head>
 <body>
+<div class="front-container">
+  <img src="images/logo-front.gif">
 
+    <h1 class="engineer-name">SOFTWARE ENGINEER</h1>
+    <h1 class="my-name">Dennis Polku Dalip</h1>
   
+</div>
+
 </body>
 </html>
