--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
   <title>Dennis Poliku Dalip</title>
 </head>
 <body>
+
 <div class="front-container">
   <img src="images/logo-front.gif">
-
     <h1 class="engineer-name">SOFTWARE ENGINEER</h1>
     <h1 class="my-name">Dennis Polku Dalip</h1>
-  
 </div>
+
+<div class="ps-container">
+  <a href="#projects"style=text-decoration:none;>
+    <h2 class=projects>PROJECTS</h2></a>
+  <a href="#skills"style=text-decoration:none>
+    <h2 class=skills>SKILLS</h2></a>
+</div>
+
+
+
 
 </body>
 </html>
