--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="front-container">
-  <img src="images/logo-front.gif">
+  <img src="images/logo-front.gif" for="Front-logo">
     <h1 class="engineer-name">SOFTWARE ENGINEER</h1>
     <h1 class="my-name">Dennis Polku Dalip</h1>
 </div>
@@ -21,8 +21,14 @@
     <h2 class=skills>SKILLS</h2></a>
 </div>
 
-
-
+<div class="social-media">
+  <a href="https://www.linkedin.com/in/dennis-poliku-42b437210/" target="noopener noreferrer"></a>
+    <img src="https://www.upload.ee/image/16213197/702300.png" width="32x32" alt="LinkedIn">
+  <a href="https://github.com/dennispoliku" target="noopener noreferrer"></a>
+    <img src="https://www.upload.ee/image/16213207/25231.png" width="32x32" alt="GitHub">
+  <a href="https://www.facebook.com/dennis.dalip/" target="noopener noreferrer"></a>
+    <img src="https://www.upload.ee/image/16213211/225129.png" width="32x32" alt="Facebook"> 
+</div>
 
 </body>
 </html>
