Sorted code. Added new section.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
 
+  <div class="social-media">
+    <a href="https://www.linkedin.com/in/dennis-poliku-42b437210/" target="noopener noreferrer">
+      <img src="https://www.upload.ee/image/16213197/702300.png" width="32x32" alt="LinkedIn"></a>
+    <a href="https://github.com/dennispoliku" target="noopener noreferrer">
+      <img src="https://www.upload.ee/image/16213207/25231.png" width="32x32" alt="GitHub"></a>
+    <a href="https://www.facebook.com/dennis.dalip/" target="noopener noreferrer">
+      <img src="https://www.upload.ee/image/16213211/225129.png" width="32x32" alt="Facebook"></a>
+      <a href="#section2">
+      <img class="contact-icon" src="https://www.upload.ee/image/16219839/mail.png" width="32x32" alt="contact"></a>
+  </div>
+
 <div class="front-container">
   <img src="images/logo-front.gif" for="Front-logo">
     <h1 class="engineer-name">SOFTWARE ENGINEER</h1>
@@ -21,14 +32,7 @@
     <h2 class=skills>SKILLS</h2></a>
 </div>
 
-<div class="social-media">
-  <a href="https://www.linkedin.com/in/dennis-poliku-42b437210/" target="noopener noreferrer"></a>
-    <img src="https://www.upload.ee/image/16213197/702300.png" width="32x32" alt="LinkedIn">
-  <a href="https://github.com/dennispoliku" target="noopener noreferrer"></a>
-    <img src="https://www.upload.ee/image/16213207/25231.png" width="32x32" alt="GitHub">
-  <a href="https://www.facebook.com/dennis.dalip/" target="noopener noreferrer"></a>
-    <img src="https://www.upload.ee/image/16213211/225129.png" width="32x32" alt="Facebook"> 
-</div>
+
 
 </body>
 </html>
